put instructions into form placeholder

--- a/index.html
+++ b/index.html
@@ -13,15 +13,12 @@
     <div id="title">
       <h1>Welcome to letter count!</h1>
     </div>
-    <div id="readme">
-      <p>Please enter text below, and we will count the multiplicity of each character!</p>
-    </div>
 
     <div>
       <form name="letters">
         <div layout-gt-xs="row">
           <md-input-container class="md-block" flex-gt-xs>
-            <label>Title</label>
+            <label>Enter title here</label>
             <input ng-model="board.title">
           </md-input-container>
         </div>
