revert to old version to fix compatibility issue with Angular Material

--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
     <div id="changelog">
       <strong>Changelog</strong>
       <ul>
+        <li>August 17, 2016 - Revert to old version to fix compatibility issues</li>
+        <li>August 16, 2016 - The count of letters automatically update. Capital letters counted separately from lowercase letters.</li>
         <li>March 10, 2016 - Moved the capital letter checkbox below search
 bar.</li>
         <li>March 6, 2016 - Added the option to count with capital letters.</li>
