revert to old version

--- a/index.html
+++ b/index.html
@@ -1,37 +1,42 @@
-<html lang="en">
-
-<head>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.css">
-</head>
-
-<body ng-app="LetterCounterApp" ng-cloak>
-
-
-  <md-content layout-padding>
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <title>Letter Count</title>
+    <link rel="stylesheet" type = "text/css" href="stylesheet.css">
+    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Roboto' 
+          rel='stylesheet' type='text/css'>
+    <script src="scripts.js"></script>
+  </head>
+  <body>
     <div id="title">
       <h1>Welcome to letter count!</h1>
     </div>
-
-    <div>
-      <form name="letters">
-        <div layout-gt-xs="row">
-          <md-input-container class="md-block" flex-gt-xs>
-            <label>Enter title here</label>
-            <input ng-model="board.title">
-          </md-input-container>
+    <div id="readme">
+      <p>Please enter text into the box below, click submit
+         and we will count the multiplicity of each character!</p>
+    </div>
+    <div id="form">
+      <form>
+        <input type="text" name="data" id="inputbox" placeholder="Enter text here">
+        <input type="submit" id="submit-button" value="Submit">
+        <div>
+          <input type="checkbox" name="caps" id="caps-checkbox" value="1"> Use capitals
         </div>
+
       </form>
     </div>
-    <div ng-controller="LetterCounter">
-      <pre>{{countLetters(board.title)}}</pre>
-    </div>
-
+    <p>
+      <div id="results">
+        <script>countLetters()</script>
+      </div>
+    </p>
     <div id="footer">
-      <p>The source code for this is completely free and open source. It can be found at <a href="http://www.github.com/meibenny/countletters"
-          target="_blank">github</a>.
-        <br> Note: I make no guarantees concerning the accuracy of this tool. Everything should be verified by a human.
+      <p>The source code for this is completely free and open source. It can
+         be found at <a href="http://www.github.com/meibenny/countletters" target="_blank">github</a>.
+         <br>
+         Note: I make no guarantees concerning the accuracy of this tool. Everything should be verified by a human.
       </p>
     </div>
     <div id="changelog">
@@ -39,19 +44,16 @@
       <ul>
         <li>August 17, 2016 - Revert to old version to fix compatibility issues</li>
         <li>August 16, 2016 - The count of letters automatically update. Capital letters counted separately from lowercase letters.</li>
-        <li>March 10, 2016 - Moved the capital letter checkbox below search bar.</li>
+        <li>March 10, 2016 - Moved the capital letter checkbox below search
+bar.</li>
         <li>March 6, 2016 - Added the option to count with capital letters.</li>
-        <li>March 6, 2016 - Changed font and added some visual element changes.</li>
+        <li>March 6, 2016 - Changed font and added some visual element
+changes.</li>
         <li>January 19, 2016 - Should accurately count all characters.</li>
       </ul>
     </div>
-
-  </md-content>
-
-  <!-- Angular Material requires Angular.js Libraries -->
-  <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular.min.js"></script>
-  <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-animate.min.js"></script>
-  <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-aria.min.js"></script>
+  </body>
+</html>
   <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-messages.min.js"></script>
 
   <!-- Angular Material Library -->
