use bootstrap for responsive site. angular for dynamic counting behavior

--- a/index.html
+++ b/index.html
@@ -1,22 +1,46 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <title>Letter Count</title>
-    <link rel="stylesheet" type = "text/css" href="stylesheet.css">
-    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Roboto' 
-          rel='stylesheet' type='text/css'>
-    <script src="scripts.js"></script>
-  </head>
-  <body>
-    <div id="title">
-      <h1>Welcome to letter count!</h1>
+
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Letter Count</title>
+  <link rel="stylesheet" type="text/css" href="stylesheet.css">
+  <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+  <script src="scripts.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+  <!-- Latest compiled and minified CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+    crossorigin="anonymous">
+
+  <!-- Optional theme -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp"
+    crossorigin="anonymous">
+
+  <!-- Latest compiled and minified JavaScript -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+    crossorigin="anonymous"></script>
+
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
+
+</head>
+
+<body ng-app="LetterCounterApp">
+  <div id="title">
+    <h1>Welcome to letter count!</h1>
+  </div>
+  <div id="readme">
+    <p>Please enter text into the box below and we will count the multiplicity of each character!</p>
+  </div>
+
+  <div class="container">
+    <div class="form-group">
+      <label for="usr">Title:</label>
+      <input type="text" class="form-control" id="usr" ng-model="board.title">
     </div>
-    <div id="readme">
-      <p>Please enter text into the box below, click submit
-         and we will count the multiplicity of each character!</p>
-    </div>
+    <!--
     <div id="form">
       <form>
         <input type="text" name="data" id="inputbox" placeholder="Enter text here">
@@ -27,16 +51,18 @@
 
       </form>
     </div>
+    -->
     <p>
-      <div id="results">
-        <script>countLetters()</script>
+      <div id="results" ng-controller="LetterCounter">
+        <!--<script>countLetters()</script>-->
+        Results:
+        <pre>{{countLetters(board.title)}}</pre>
       </div>
     </p>
     <div id="footer">
-      <p>The source code for this is completely free and open source. It can
-         be found at <a href="http://www.github.com/meibenny/countletters" target="_blank">github</a>.
-         <br>
-         Note: I make no guarantees concerning the accuracy of this tool. Everything should be verified by a human.
+      <p>The source code for this is completely free and open source. It can be found at <a href="http://www.github.com/meibenny/countletters"
+          target="_blank">github</a>.
+        <br> Note: I make no guarantees concerning the accuracy of this tool. Everything should be verified by a human.
       </p>
     </div>
     <div id="changelog">
@@ -44,23 +70,25 @@
       <ul>
         <li>August 17, 2016 - Revert to old version to fix compatibility issues</li>
         <li>August 16, 2016 - The count of letters automatically update. Capital letters counted separately from lowercase letters.</li>
-        <li>March 10, 2016 - Moved the capital letter checkbox below search
-bar.</li>
+        <li>March 10, 2016 - Moved the capital letter checkbox below search bar.
+        </li>
         <li>March 6, 2016 - Added the option to count with capital letters.</li>
-        <li>March 6, 2016 - Changed font and added some visual element
-changes.</li>
+        <li>March 6, 2016 - Changed font and added some visual element changes.
+        </li>
         <li>January 19, 2016 - Should accurately count all characters.</li>
       </ul>
     </div>
-  </body>
+  </div>
+</body>
+
 </html>
-  <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-messages.min.js"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-messages.min.js"></script>
 
-  <!-- Angular Material Library -->
-  <script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.js"></script>
+<!-- Angular Material Library -->
+<script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.js"></script>
 
-  <script type="text/javascript">    
-    var myApp = angular.module('LetterCounterApp', ['ngMaterial']);
+<script type="text/javascript">    
+    var myApp = angular.module('LetterCounterApp', []);
 
     myApp.controller('LetterCounter', ['$scope', function($scope){
       $scope.double = function (value = 0) { return value * 2; };
