--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
     <div id="changelog">
       <strong>Changelog</strong>
       <ul>
+        <li>August 17, 2016 - Fixed compatibility issues</li> 
         <li>August 17, 2016 - Revert to old version to fix compatibility issues</li>
         <li>August 16, 2016 - The count of letters automatically update. Capital letters counted separately from lowercase letters.</li>
         <li>March 10, 2016 - Moved the capital letter checkbox below search bar.
