--- a/index.html
+++ b/index.html
@@ -35,13 +35,16 @@
     <p>Please enter text into the box below and we will count the multiplicity of each character!</p>
   </div>
 
-  <div class="container">
+  <div class="container" ng-controller="LetterCounter">
     <div class="form-group">
       <label for="usr">Title:</label>
       <input type="text" class="form-control" id="usr" ng-model="board.title">
     </div>
+    <div class="checkbox">
+      <label><input type="checkbox" ng-model="checkboxModel.ignoreCapitals">Ignore capital letters</label>
+    </div>
     <p>
-      <div id="results" ng-controller="LetterCounter">
+      <div id="results">
         Results:
         <pre>{{countLetters(board.title)}}</pre>
       </div>
@@ -71,10 +74,15 @@
 <script type="text/javascript">    
     var myApp = angular.module('LetterCounterApp', []);
     myApp.controller('LetterCounter', ['$scope', function($scope){
-      $scope.double = function (value = 0) { return value * 2; };
+      $scope.checkboxModel = {
+        ignoreCapitals: false
+      }
       $scope.countLetters = 
         function (title = ""){
           var textIn = title;
+          if($scope.checkboxModel.ignoreCapitals){
+            textIn = textIn.toLowerCase();
+          }
           var char_count = new Object();
           var textIn_length = textIn.length;
           for(var i = 0; i < textIn_length; i++){
