Change checkbox label to remove ambiguity

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <input type="text" class="form-control" id="usr" placeholder="Title" ng-model="board.title">
     </div>
     <div class="checkbox">
-      <label><input type="checkbox" ng-model="checkboxModel.ignoreCapitals">Ignore capital letters</label>
+      <label><input type="checkbox" ng-model="checkboxModel.ignoreCapitals">Ignore capitaliztion</label>
     </div>
     <p>
       <div id="results">
