--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   </div>
   <div id="readme">
     <p>Please enter text into the box below and we will count the multiplicity of each character!</p>
+    <p>Issues? Try the <a href="../oldlettercount">old version</a>!</p>
   </div>
   <div class="container" ng-controller="LetterCounter">
     <div class="form-group">
@@ -36,30 +37,17 @@
       <div id="results">
         Results:
         <div class="letter-counts" ng-repeat="(letter, count) in letterCounts">
-          {{letter}}:{{count}}
+          <div ng-class-odd="'same-row grey-row';" ng-class-even="'same-row';"><div>{{letter}}</div></div>:<input class="count-holder" ng-value="count">
         </div>
       </div>
     </p>
     <div id="footer">
-      <p>This was created to help make the lives of Resident Assistants easier by doing some boring counting for them.</p>
+      <p>This was created to help make the lives of Resident Assistants easier by doing some boring counting.</p>
       <p>Questions? Comments? Concerns? Ideas? Find me on Twitter <a href="https://twitter.com/meibenny">@meibenny</a>.</p>
       <p>The source code for this is completely free and open source. It can be found at <a href="http://www.github.com/meibenny/countletters"
           target="_blank">github</a>.
         <br> Note: I make no guarantees concerning the accuracy of this tool. Everything should be verified by a human.
       </p>
-    </div>
-    <div id="changelog">
-      <strong>Changelog</strong>
-      <ul>
-        <li>October 21, 2016 - Added contact information</li>
-        <li>August 17, 2016 - Fixed compatibility issues</li>
-        <li>August 17, 2016 - Revert to old version to fix compatibility issues</li>
-        <li>August 16, 2016 - The count of letters automatically update. Capital letters counted separately from lowercase letters.</li>
-        <li>March 10, 2016 - Moved the capital letter checkbox below search bar.</li>
-        <li>March 6, 2016 - Added the option to count with capital letters.</li>
-        <li>March 6, 2016 - Changed font and added some visual element changes.</li>
-        <li>January 19, 2016 - Should accurately count all characters.</li>
-      </ul>
     </div>
   </div>
 </body>
